Fix bug where combination of transition and stroke caused flicker on mouseover in Chrome.

--- a/css/svg.css
+++ b/css/svg.css
@@ -11,9 +11,8 @@
 }
 
 .hit {
-}
-
-.hit:hover {
+  stroke: rgba(255, 255, 255, 0.5);
+  stroke-width: 1px;
 }
 
 .axis-label {
